--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 
 # Site
-title: 'Echo Chien'
-subtitle: 'Echo Chien'
+title: 'Echo_Chien'
+subtitle: 'Echo_Chien'
 description: 'Echo Chien'
 keywords: 'Echo Chien'
 author: 'Echo Chien'
